#144 Исправления для молодого